přidán credit a odkazy na KI

--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
       </div>
 
       <div class="controls">
-        <a href="#" onclick="run();">RUN</a>
+        <a href="#" onclick="run();">spustit</a>
       </div>
   </main>
 
+<small class="credit">&copy; Lišák Alan 1.0 | Martin Trnečka a Markéta Trnečková | <a href="https://www.inf.upol.cz/">Katedra informatiky</a> | <a href="https://www.upol.cz/">Univerzita Palackého v Olomouci</a></small>
 
       <!-- assets -->
       <img id="grass1" src="./assets/grass1.svg" class="hidden">       <!-- 1 -->
@@ -113,6 +114,7 @@
       <img id="flower3" src="./assets/flower3.svg" class="hidden">     <!-- 503 -->
 
   <script>
+
 
 
   // TODO: uchovavat pozici lisky a smer lisky v promenne
