blocky credit added

--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
       </div>
   </main>
 
-<small class="credit">&copy; Lišák Alan 1.0 | Martin Trnečka a Markéta Trnečková | <a href="https://www.inf.upol.cz/">Katedra informatiky</a> | <a href="https://www.upol.cz/">Univerzita Palackého v Olomouci</a></small>
+<small class="credit">&copy; Lišák Alan 1.0 | Martin Trnečka a Markéta Trnečková | <a href="https://www.inf.upol.cz/">Katedra informatiky</a> | <a href="https://www.upol.cz/">Univerzita Palackého v Olomouci</a>
+
+<span>založeno na <a href="https://developers.google.com/blockly" rel="external"><img src="./assets/blockly.svg"></a></span>
+</small>
 
       <!-- assets -->
       <img id="grass1" src="./assets/grass1.svg" class="hidden">       <!-- 1 -->
