--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="editor">
         <div class="tabs">
 
-          <div id="blockly"></div>
+          <div id="blockly" style="position: absolute"></div>
 
           <textarea id="textarea" style="height: 650px; width: 600px;" class="hidden"></textarea>
         </div>
@@ -126,12 +126,12 @@
     hra_prodleva: 2000, // udava prodlevu ve volani zakladnich procedur
     deska:  [[  1,  1,  1, 11, 12, 11, 11,  6,  1,302],
              [  1, 31,  1,  2,  6,  1,  1,  1, 31,  1],
-             [  2,  1, 32, 32, 34, 31, 31, 35,2,  1],
+             [  2,  1, 32, 32, 34, 31, 31, 35,202,  1],
              [ 11,  7, 31, 31, 31, 31, 31, 35,  1, 11],
              [ 12,  1, 31, 31,  2,402, 31, 31,  1, 11],
              [ 12,  3, 31, 35, 41,  7, 31, 32,  1, 12],
              [ 11,  1, 36, 31, 31, 31, 31, 34,501, 12],
-             [  2,  1, 31, 31, 31, 32, 31, 33,202,  1],
+             [  2,  1, 31, 31, 31, 32, 31, 33,  2,  1],
              [  1, 32,  1,  2,  7,  1,  1,  1, 33,  1],
              [  1,  1,  1, 12, 12, 12, 13,  1,  7,  1]],
 
@@ -667,10 +667,15 @@
     proved: function(instrukce) {
 
       // implementuje zasobnikove vyhodnocovani
-      this.prikazy = instrukce.split(/ |\n/);
+      this.prikazy = instrukce.split(/ |\n/).filter(Boolean);
       this.instrukce = 0;
       this.zasobnik = [];
+      this.funkce = [];
 
+      this.funkce[1] = this.prikazy.findIndex(function(ins) {return ins=="F1";});
+      this.funkce[2] = this.prikazy.findIndex(function(ins) {return ins=="F2";});
+
+      //alert(this.prikazy);
       window.requestAnimationFrame(smycka);
     },
   }
@@ -679,6 +684,11 @@
 function smycka() {
     try {
         if(hra.instrukce>=hra.prikazy.length) return;
+
+        if(hra.prikazy[hra.instrukce]=='F1()') {
+          hra.zasobnik.push(['FUNKCE', hra.instrukce+1]); // skok zpět na nasledujici instrukci
+          hra.instrukce == hra.funkce[1] + 1; // nasledujici instrukce ve funkci f1
+        }
 
         if(hra.prikazy[hra.instrukce]=='OPAKUJ') {
           hra.zasobnik.push(['OPAKUJ', hra.instrukce+2, hra.prikazy[hra.instrukce+1]]); // skok a cislo
@@ -761,6 +771,10 @@ function smycka() {
 
         if(hra.prikazy[hra.instrukce]=='END') {
           vrchol = hra.zasobnik.pop();
+
+          if (vrchol[0]=='FUNKCE') {
+            hra.instrukce = vrchol[1];
+          }
 
           if (vrchol[0]=='OPAKUJ') {
             if(vrchol[2] > 1) {
@@ -884,13 +898,16 @@ Blockly.Xml.domToWorkspace(Blockly.Xml.textToDom(xml), workspace);       */
   <block type="opakuj"></block>
   <block type="opakuj_p"></block>
   <block type="if_p"></block>
-  <block type="function"></block>
+  <block type="function_1"></block>
+  <block type="call_f1"></block>
+  call_f1
 </xml>
 
 <script>
 Blockly.JavaScript.addReservedWords('code');
 
-var workspace = Blockly.inject('blockly', {toolbox: document.getElementById('toolbox'), toolboxPosition: "start", trashcan: "true", maxInstances:{krok:Infinity, seber_slepici:2}});
+var workspace = Blockly.inject('blockly', {toolbox: document.getElementById('toolbox'), toolboxPosition: "start",  zoom:
+         {startScale: 0.8}, trashcan: "true", maxInstances:{krok:Infinity, seber_slepici:2}});
 
 var code = Blockly.JavaScript.workspaceToCode(workspace)
 
