--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <script src="./blocky/alan_blocks.js"></script>
   <script src="./blocky/alan_generators.js"></script>
 
+  <!-- levely -->
+  <script src="./levels/level.js"></script>
+
   <meta name="author" content="Martin Trnecka, Marketa Trneckova">
 </head>
 
@@ -118,36 +121,33 @@
 
   <script>
 
-
-
-  // TODO: uchovavat pozici lisky a smer lisky v promenne
   // Alan the fox
   var hra = {
-    hra_prodleva: 2000, // udava prodlevu ve volani zakladnich procedur
-    deska:  [[  1,  1,  1, 11, 12, 11, 11,  6,  1,302],
-             [  1, 31,  1,  2,  6,  1,  1,  1, 31,  1],
-             [  2,  1, 32, 32, 34, 31, 31, 35,202,  1],
-             [ 11,  7, 31, 31, 31, 31, 31, 35,  1, 11],
-             [ 12,  1, 31, 31,  2,402, 31, 31,  1, 11],
-             [ 12,  3, 31, 35, 41,  7, 31, 32,  1, 12],
-             [ 11,  1, 36, 31, 31, 31, 31, 34,501, 12],
-             [  2,  1, 31, 31, 31, 32, 31, 33,  2,  1],
-             [  1, 32,  1,  2,  7,  1,  1,  1, 33,  1],
-             [  1,  1,  1, 12, 12, 12, 13,  1,  7,  1]],
 
-    deska_original: [[  1,  1,  1, 11, 12, 11, 11,  6,  1,302],
-             [  1, 31,  1,  2,  6,  1,  1,  1, 31,  1],
-             [  2,  1, 32, 32, 34, 31, 31, 35,  2,  1],
-             [ 11,  7, 31, 31, 31, 31, 31, 35,  1, 11],
-             [ 12,  1, 31, 31,  2,  7, 31, 31,  1, 11],
-             [ 12,  3, 31, 35, 41,  7, 31, 32,  1, 12],
-             [ 11,  1, 36, 31, 31, 31, 31, 34,501, 12],
-             [  2,  1, 31, 31, 31, 32, 31, 33,  1,  1],
-             [  1, 32,  1,  2,  7,  1,  1,  1, 33,  1],
-             [  1,  1,  1, 12, 12, 12, 13,  1,  7,  1]],
-
-    pohyb_pes: [[5, 5, 2], [5, 5, 3], [5, 5, 4], [4, 5, 4], [4, 5, 1], [4, 5, 2]],
+    deska: [], // uchovává aktuálo ní desku
+    deska_original: [], // výchozí deska (bez Alana a psa)
+    pohyb_pes: [],
     index_pohyb_pes: 0,
+
+    // nacitani jednotlivých levelů
+    nacti_level: function(level) {
+      this.deska = levels[level].mapa.slice();
+      this.deska_original = levels[level].mapa.slice();
+
+      console.log(levels[level].mapa);
+
+      // pozice Alana
+      this.deska[levels[level].pozice_lisky[0]][levels[level].pozice_lisky[1]] = 200 + levels[level].pozice_lisky[2];
+
+      // pozice psa
+      this.pohyb_pes = levels[level].instrukce_psa;
+
+      if (this.pohyb_pes.length != 0) {
+        this.deska[levels[level].instrukce_psa[0][0]][levels[level].instrukce_psa[0][1]] = 400 + levels[level].instrukce_psa[0][2];
+      }
+
+      this.index_pohyb_pes = 0;
+    },
 
     krok: function() {
       console.log('krok vpřed');
@@ -203,7 +203,7 @@
       if(this.deska_original[new_x][new_y]==503)            //podminka
         this.deska[new_x][new_y] += 30;
 
-      //console.log(JSON.stringify(this.deska));
+      console.log(JSON.stringify(this.deska));
       this.deska[x][y] = this.deska_original[x][y] ;
     },
 
@@ -877,13 +877,14 @@ function smycka() {
   }
 
 
+hra.nacti_level(0);
 hra.nakresli_mapu();
 
-hra.hlaseni(1,2,3,9, "tak jdeme na to");
+//hra.hlaseni(1,2,3,9, "tak jdeme na to");
 
-hra.hlaseni(2,2,5,6, "haf");
+//hra.hlaseni(2,2,5,6, "haf");
 
-hra.hlaseni(3,1,1,10, "kvok");
+//hra.hlaseni(3,1,1,10, "kvok");
 
 
 /*
